Use fixed ip for docker gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,3 +59,8 @@ networks:
   strapi:
     name: Strapi
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.19.0.0/16
+          gateway: 172.19.0.1
