Add extra_hosts to compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - strapi
     depends_on:
       - strapiDB
+    extra_hosts:
+      - "melaniebeeckman.be:127.0.0.1"
 
   strapiDB:
     container_name: strapiDB
@@ -59,8 +61,3 @@ networks:
   strapi:
     name: Strapi
     driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.19.0.0/16
-          gateway: 172.19.0.1
