--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     depends_on:
       - strapiDB
     extra_hosts:
-      - "melaniebeeckman.be:127.0.0.1"
+      - "melaniebeeckman.be:host-gateway"
 
   strapiDB:
     container_name: strapiDB
