--- a/melaniebeeckman-astro/package.json
+++ b/melaniebeeckman-astro/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.7.12",
+    "flag-icons": "^7.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.6"
