--- a/melaniebeeckman-astro/tsconfig.json
+++ b/melaniebeeckman-astro/tsconfig.json
@@ -16,7 +16,8 @@
       "@i18n/*": ["src/i18n/*"],
       "@pages/*": ["src/pages/*"],
       "@components/*": ["src/components/*"],
-      "@layouts/*": ["src/layouts/*"]
+      "@layouts/*": ["src/layouts/*"],
+      "@styles/*": ["src/styles/*"]
     }
   }
 }
