--- a/melaniebeeckman-astro/tsconfig.json
+++ b/melaniebeeckman-astro/tsconfig.json
@@ -17,7 +17,9 @@
       "@pages/*": ["src/pages/*"],
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@lib/*": ["src/lib/*"],
+      "@interfaces/*": ["src/interfaces/*"]
     }
   }
 }
