--- a/melaniebeeckman-astro/package.json
+++ b/melaniebeeckman-astro/package.json
@@ -12,15 +12,19 @@
     "@astrojs/react": "^4.2.7",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@tailwindcss/vite": "^4.1.6",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.7.12",
     "flag-icons": "^7.3.2",
+    "marked": "^15.0.12",
+    "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "daisyui": "^5.0.35"
   }
 }
