--- a/melaniebeeckman-astro/package.json
+++ b/melaniebeeckman-astro/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.7.12",
+    "astro-icon": "^1.1.5",
     "flag-icons": "^7.3.2",
     "marked": "^15.0.12",
     "qs": "^6.14.0",
@@ -24,6 +25,7 @@
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/typography": "^0.5.16",
     "daisyui": "^5.0.35"
   }
